# wolfenstein3d

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: CMake.yml
data/textures/: skull.ppm  wall.ppm
include/: enemy.h  game.h  hello_world.h  level.h  player.h  texture.h  utility.h
include/engine/: enemy.h  engine.h  game.h  level.h  player.h  texture.h  utility.h
src/: main.cpp
src/engine/: engine.cpp  game.cpp  level.cpp  texture.cpp
tests/: template_test.cpp
textures/: skull.ppm
